# mlx-mtp

./: .gitignore  pyproject.toml  setup_cython.py
benchmarks/: benchmark.py  benchmark_all.py  benchmark_batch_speculation.py  benchmark_coder_next.py  benchmark_combined.py  benchmark_compile.py  benchmark_compile_v2.py  benchmark_custom_kernel.py  benchmark_eagle_turboquant.py  benchmark_framework_opts.py  benchmark_fused_model.py  benchmark_fused_moe.py  benchmark_glm_comprehensive.py  benchmark_layer_skip.py  benchmark_mtp_optimized.py  benchmark_nemotron.py  benchmark_next_80b.py  benchmark_optimizations.py  benchmark_tq_lm.py  benchmark_turboquant.py
docs/: BENCHMARK_GLM_COMPREHENSIVE.md  BENCHMARK_REPORT.md  BENCHMARK_REPORT_ALL_MODELS.md  BENCHMARK_RESULTS.md  BENCHMARK_TURBOQUANT.md  INVESTIGATION_DATA.md  OPTIMIZATION_REPORT.md  WRITEUP.md  agentic_inference_optimizations.md  eagle_advanced_speculation.md  moe_serving_optimizations.md  mtp_architecture.md  research_framework_opts.md  turboquant_algorithm.md
mlx_fused_moe/: CMakeLists.txt  __init__.py  patch.py  patch_deltanet.py  patch_fused_proj.py  patch_moe_full.py  patch_prefill.py  pyproject.toml  python_impl.py  setup.py
mlx_fused_moe/cpp/: bindings.cpp  ops.cpp  ops.h
mlx_fused_moe/kernels/: fused_qmv.metal  gather_qmm_down_reduce.metal  gather_qmm_swiglu.metal  grouped_gemm_swiglu.metal
mlx_fused_moe/mlx_fused_moe/: __init__.py
results/: benchmark_GLM_4_7_Flash_4bit.json  benchmark_Nemotron_3_Nano_30B_A3B.json  benchmark_Nemotron_3_Nano_4B.json  benchmark_Qwen3_5_0_8B_4bit.json  benchmark_Qwen3_5_0_8B_8bit.json  benchmark_Qwen3_5_2B_4bit.json  benchmark_Qwen3_5_2B_8bit.json  benchmark_Qwen3_Next_80B_A3B_3bit.json  benchmark_batch_speculation_results.json  benchmark_compile_results.json  benchmark_glm_mtp_results.json  benchmark_layer_skip_results.json  benchmark_long_context.json  benchmark_mtp_optimized_results.json  benchmark_new_mtp_models.json  benchmark_optimizations_35B.json  benchmark_results_27B.json  benchmark_results_35B-A3B.json  benchmark_results_4B.json  benchmark_results_9B.json  (+3 more)
scripts/: mtp_poc.py  (+13 more)
(+21 files in other folders)
